# godel-rwkv

./: .gitignore  MODEL.md  README.md  collatz.py  frontier.py  goodstein.py  install.sh  main.py  mine_sessions.py  pyproject.toml  train.py
daemon/: Makefile  daemon.c  godel.c  godel.h
output/: RESULTS_COLLATZ.md  RESULTS_CURRICULUM.md  RESULTS_GOODSTEIN.md  RESULTS_V2.md  collatz.json  frontier.json  goodstein.json
src/godel_rwkv/: curriculum.py  encoding.py  lambda_calculus.py  model.py  ski.py  turing_machine.py  utils.py
src/godel_rwkv/curriculum/: __init__.py  baselines.py  stages.py  synthetic.py
src/godel_rwkv/evaluation/: __init__.py  battery.py  diagonal.py
src/godel_rwkv/formal_systems/: __init__.py  lambda_calculus.py  ski.py  turing_machine.py
tools/: export_weights.py
training/: convert_swe.py  eval.py  generate_mock.py  generate_success_mock.py  train_binary.py  train_classifier.py  train_multiclass.py  train_success.py
weights/: classifier.npz  multiclass.npz  success.npz
