[project]
name = "godel-rwkv"
version = "0.1.0"
description = "96K parameter RWKV-7 that learns abstract non-termination across formal systems (SKI, Lambda, Turing machines)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mlx>=0.31.1",
    "numpy>=2.4.4",
    "ruff>=0.15.11",
]

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/godel_rwkv"]
