[project]
name = "godel-rwkv"
version = "0.2.0"
description = "RWKV-7 trading regime classifier — tiny model, raw order flow, BTC/USDT market regimes"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mlx>=0.31.1",
    "numpy>=2.4.4",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.15.11",
    "datasets>=3.0.0",
]

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/godel_rwkv", "src/navigator_core", "src/trading_navigator"]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E741", "E501"]
